[package]
name = "tty_relay"
version = "0.1.0"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.4"
clap_generate = "3.0.0-beta.4"
serialport = "4.0.1"
flexi_logger = "0.20"
log = "0.4"

[features]
default = ["no-connected"]
no-connected = []
nc-connected = []

[dev-dependencies]
transmute = "0.1.1"
